Work on betData and control

--- a/blackjackTeamWorkspace/blackjack/clientUI/.gitignore
+++ b/blackjackTeamWorkspace/blackjack/clientUI/.gitignore
@@ -5,3 +5,11 @@
 /InitialPanel.class
 /LoginPanel.class
 /StartGamePanel.class
+/BetPanel$1.class
+/BetPanel$2.class
+/BetPanel$3.class
+/BetPanel$4.class
+/BetPanel$5.class
+/BetPanel$7.class
+/BetPanel$8.class
+/BetPanel$6.class
