Added JUnit tests

--- a/blackjackTeamWorkspace/blackjack/clientCommunication/.gitignore
+++ b/blackjackTeamWorkspace/blackjack/clientCommunication/.gitignore
@@ -5,3 +5,6 @@
 /LoginControl.class
 /LoginData.class
 /StartGameControl.class
+/TestCreateAccount.class
+/TestClientServerConnection.class
+/TestClientServer.class
