--- a/blackjackTeamWorkspace/blackjack/.classpath
+++ b/blackjackTeamWorkspace/blackjack/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/Users/riovi/Documents/School/SeniorYear/SoftwareEngineering/BlackjackHolder/blackjackSoftwareEngineering/blackjackTeamWorkspace/blackjack/mysql-connector-java-5.1.40-bin.jar"/>
-	<classpathentry kind="lib" path="C:/Users/riovi/Documents/School/SeniorYear/SoftwareEngineering/BlackjackHolder/blackjackSoftwareEngineering/blackjackTeamWorkspace/blackjack/ocsf.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="mysql-connector-java-5.1.40-bin.jar"/>
+	<classpathentry kind="lib" path="ocsf.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
